fix: 關注清單ileo刪除但理財網還存在bug fix: 刪除後列表異常bug fix: ileo加入之商品備註bug

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FocusList/_ShareScript.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FocusList/_ShareScript.cshtml
@@ -605,6 +605,8 @@
                 type: "post",
                 url: "@ClientRoute.GenerateUrl(this, "Accounts", "GetTrackList")",
                 success: function (msg) {
+                    //設定localstorage才能對照備註
+                    store.set('focus', msg);
                     resetTable(msg);
                     resetTable2(msg);
                     resetTable3(msg);
