update: 調整隱藏會員綁定相關功能

--- a/src/Feature/Account/platform/Views/Feature/Wealth/Account/MemberCard/MemberCard.cshtml
+++ b/src/Feature/Account/platform/Views/Feature/Wealth/Account/MemberCard/MemberCard.cshtml
@@ -42,9 +42,9 @@
                                     <div class="l-flex__item l-flex__item--auto">
                                         <span class="t-tip t-tip--lt">由@(member.PlatForm.ToString())帳號登入</span>
                                     </div>
-                                    <div class="l-flex__item l-flex__item--auto">
+                                   @*  <div class="l-flex__item l-flex__item--auto">
                                         <a href="javascript:;" class="o-btn o-btn--primary o-btn--thin o-btn--auto" data-eh="fcblogin-click">綁定網銀帳戶</a>
-                                    </div>
+                                    </div> *@
                                 </div>
                             }
                             else
