--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/HeaderWidget/_LoginState.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/HeaderWidget/_LoginState.cshtml
@@ -8,26 +8,26 @@
 <div class="l-header__tools">
     <div class="l-topbar">
         <!-- 登入狀態 -->
-            <div class="l-topbar__list">
-                <div class="l-topbar__item">
-                    <a href="#" class="o-topBtn o-topBtn--notify u-hidden" data-popover="#popoverNotify"></a>
+        <div class="l-topbar__list">
+            <div class="l-topbar__item">
+                <a href="#" class="o-topBtn o-topBtn--notify u-hidden" data-popover="#popoverNotify"></a>
                 <div id="popoverNotify" class="c-popover is-notify">
-                        <div class="c-popover__wrap">
-                            <nav class="c-popover__content">
-                                <div class="l-flex u-flex-col">
-                                    <div class="l-flex__item">
-                                        <ul class="c-listGroup" id="topInfoList">
-                                        </ul>
-                                    </div>
-                                    <div class="l-flex__item u-center">
-                                        <a href="@MemberRelatedLinkHelper.GetInfoListUrl()" class="o-link">更多通知</a>
-                                    </div>
+                    <div class="c-popover__wrap">
+                        <nav class="c-popover__content">
+                            <div class="l-flex u-flex-col">
+                                <div class="l-flex__item">
+                                    <ul class="c-listGroup" id="topInfoList">
+                                    </ul>
                                 </div>
-                            </nav>
-                        </div>
+                                <div class="l-flex__item u-center">
+                                    <a href="@MemberRelatedLinkHelper.GetInfoListUrl()" class="o-link">更多通知</a>
+                                </div>
+                            </div>
+                        </nav>
                     </div>
                 </div>
             </div>
+        </div>
         <div class="l-topbar__login">
             <!--登入狀態 電腦版-->
             <a href="#" class="o-topBtn o-topBtn--login" data-popover="#popoverMember">
@@ -50,35 +50,44 @@
                                     <img src="~/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
                                 </a>
                             </li>
+                            @if (!string.IsNullOrEmpty(member.WebBankId))
+                            {
                                 <li class="c-listGroup__item">
                                     <a href="@MemberRelatedLinkHelper.GetExclusiveRecommendationUrl()" class="o-itemLink">
                                         <span class="o-itemLink__title t-bold">專屬推薦</span>
                                         <img src="~/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
                                     </a>
                                 </li>
-                                <li class="c-listGroup__item">
-                                    <a href="@MemberRelatedLinkHelper.GetFinancialManagementTrialUrl()" class="o-itemLink">
-                                        <span class="o-itemLink__title t-bold">理財試算</span>
-                                        <img src="~/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
-                                    </a>
-                                </li>
-                                <li class="c-listGroup__item">
-                                    <a href="@MemberRelatedLinkHelper.GetFavoriteNewsUrl()" class="o-itemLink">
-                                        <span class="o-itemLink__title t-bold">收藏新聞</span>
-                                        <img src="~/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
-                                    </a>
-                                </li>
+                            }
+                            <li class="c-listGroup__item">
+                                <a href="@MemberRelatedLinkHelper.GetFinancialManagementTrialUrl()" class="o-itemLink">
+                                    <span class="o-itemLink__title t-bold">理財試算</span>
+                                    <img src="~/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
+                                </a>
+                            </li>
+                            @*  <li class="c-listGroup__item">
+                            <a href="@MemberRelatedLinkHelper.GetFavoriteNewsUrl()" class="o-itemLink">
+                            <span class="o-itemLink__title t-bold">收藏新聞</span>
+                            <img src="~/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
+                            </a>
+                            </li> *@
+                            @if (!string.IsNullOrEmpty(member.WebBankId))
+                            {
                                 <li class="c-listGroup__item">
                                     <a href="@MemberRelatedLinkHelper.GetRemoteFinancialConsultingUrl()" class="o-itemLink">
                                         <span class="o-itemLink__title t-bold">遠距理財諮詢</span>
                                         <img src="~/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
                                     </a>
                                 </li>
+                            }
                         </ul>
                     </nav>
+                    @if (!string.IsNullOrEmpty(member.WebBankId))
+                    {
                         <div class="c-popover__footer">
                             <a href="@MemberRelatedLinkHelper.GetReserveConsultingUrl()" class="o-btn o-btn--primary o-btn--sm o-btn--flat">預約諮詢</a>
                         </div>
+                    }
                 </div>
             </div>
         </div>
@@ -98,7 +107,7 @@
                 let timeStr = timeArry[0] + ":" + timeArry[1];
                 return dateStr + " " + timeStr;
             }
-            window.ResetTopInfoList = function(){
+            window.ResetTopInfoList = function () {
                 $.ajax({
                     url: '@ClientRoute.GenerateUrl(this, "MemberInfoList", "GetTopFiveInfoByMember")',
                     type: 'POST'
@@ -109,19 +118,19 @@
                         for (var i = 0; i < data.length; i++) {
                             isRead = data[i].HaveRead ? "" : "is-hint";
                             html += `<li class="c-listGroup__item" data-topInfoList>
-                                            <div class="c-itemNotify ${isRead}" data-haveread=${data[i].HaveRead}  data-recordnum="${data[i].RecordNumber}">
-                                                <div class="c-itemNotify__topbar">
-                                                    <span class="t-date">${data[i].InfoDateTimeString}</span>
-                                                    <span class="o-hangTag" data-mailType>${data[i].MailInfoType}</span>
+                                                <div class="c-itemNotify ${isRead}" data-haveread=${data[i].HaveRead}  data-recordnum="${data[i].RecordNumber}">
+                                                    <div class="c-itemNotify__topbar">
+                                                        <span class="t-date">${data[i].InfoDateTimeString}</span>
+                                                        <span class="o-hangTag" data-mailType>${data[i].MailInfoType}</span>
+                                                    </div>
+                                                    <div class="c-itemNotify__link">
+                                                            <a href="${data[i].InfoLink}" target="_blank" class="o-itemLink">
+                                                            <span class="o-itemLink__title">${data[i].InfoContent}</span>
+                                                            <img src="/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
+                                                        </a>
+                                                    </div>
                                                 </div>
-                                                <div class="c-itemNotify__link">
-                                                        <a href="${data[i].InfoLink}" target="_blank" class="o-itemLink">
-                                                        <span class="o-itemLink__title">${data[i].InfoContent}</span>
-                                                        <img src="/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
-                                                    </a>
-                                                </div>
-                                            </div>
-                                        </li>`
+                                            </li>`
                         }
                         $('#topInfoList').html(DOMPurify.sanitize(html, { ADD_ATTR: ['target'] }));
                         if ($('[data-haveread=false]', $('#popoverNotify')).length > 0) {
@@ -139,30 +148,30 @@
                 });
             }
             window.ResetTopInfoList();
-            $('#topInfoList').on('click','[data-topInfoList]', function () {
-            let $this = $(this);
-            let isRead = $this.find('[data-haveread]').data('haveread');
-            if (isRead) {
-                return;
-            }
-             $.ajax({
-                url: '@ClientRoute.GenerateUrl(this, "MemberInfoList", "SetInfoHaveReadByMember")',
-                 type: 'POST',
-                 data: { "mailInfoType": $this.find('[data-mailType]').text(), "recordNumber": $this.find('[data-recordnum]').data('recordnum') },
-                 beforeSend: function () { window.loading('show'); },
-                 success : function(data, textStatus, jqXHR) {
-                     if (data && data.success) {
-                         window.ResetTopInfoList();
-                         if ($('#uid-fjs-infoList').length > 0) {
-                             window.ResetMailInfoTable();
-                         }
+            $('#topInfoList').on('click', '[data-topInfoList]', function () {
+                let $this = $(this);
+                let isRead = $this.find('[data-haveread]').data('haveread');
+                if (isRead) {
+                    return;
+                }
+                $.ajax({
+                    url: '@ClientRoute.GenerateUrl(this, "MemberInfoList", "SetInfoHaveReadByMember")',
+                    type: 'POST',
+                    data: { "mailInfoType": $this.find('[data-mailType]').text(), "recordNumber": $this.find('[data-recordnum]').data('recordnum') },
+                    beforeSend: function () { window.loading('show'); },
+                    success: function (data, textStatus, jqXHR) {
+                        if (data && data.success) {
+                            window.ResetTopInfoList();
+                            if ($('#uid-fjs-infoList').length > 0) {
+                                window.ResetMailInfoTable();
+                            }
                             window.loading('hide');
-                       }
-                 },
-                 error: function (jqXHR, textStatus, errorThrown) { },
-                 complete: function () { $('.c-loading').loading('hide'); }
-             });
-        });
+                        }
+                    },
+                    error: function (jqXHR, textStatus, errorThrown) { },
+                    complete: function () { $('.c-loading').loading('hide'); }
+                });
+            });
 
         });
     })(jQuery, window, document);
