Update : 調整結構型商品 - 參考贖回價走勢圖設定，預防資料超過1000筆時，走勢圖無法顯示之問題

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/StructuredProduct/StructuredProductDetail.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/StructuredProduct/StructuredProductDetail.cshtml
@@ -327,7 +327,8 @@
                             name: text,
                             data: mapData,
                             legendSymbol: 'rectangle',
-                            color: obj.netWorth ? '#A4844E' : '#238C6C'
+                            color: obj.netWorth ? '#A4844E' : '#238C6C',
+                            turboThreshold: 0
                         };
                         Highcharts.stockChart('trendChart',
                             {
