update: 到價通知頁面加入參數顯示設定到價通知彈窗

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FocusList/_EtfList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FocusList/_EtfList.cshtml
@@ -116,7 +116,7 @@
                         <div class="c-cardTable__content">
                             <div class="l-target">
                                 <div class="l-target__name">
-                                    <a href="@(detailUrl)?id=<%= ProductCode %>" data-id="<%= ProductCode %>" class="o-contentLink t-bold u-ellipsis-2"><%= ProductCode %> <%= ProductName %></a>
+                                    <a href="@(detailUrl)?id=<%= ProductCode %>" target="_blank" data-id="<%= ProductCode %>" class="o-contentLink t-bold u-ellipsis-2"><%= ProductCode %> <%= ProductName %></a>
                                 </div>
                                 <% if (Tags!=null) { %>
                                 <div class="l-target__additional">
