--- a/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Popup.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Popup.cshtml
@@ -226,7 +226,7 @@
             <div class="l-flex u-flex-col u-flex-gap-sm">
                 <div class="l-flex__item">
                     <div class="c-box c-box--product c-box--og u-noShadow">
-                        <a href="#" data-title data-id class="o-contentLink t-bold u-ellipsis-2 t3"></a>
+                        <a href="#" target="_blank" data-title data-id class="o-contentLink t-bold u-ellipsis-2 t3"></a>
                         <hr>
                         <div class="l-flex">
                             <div class="l-flex__item" data-set-title>
@@ -497,7 +497,6 @@
     </script>
     Session["LoginStatus"] = null;
 }
-
 <script>
 
     $('[data-calendar]').datepickerExtend();
