--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FocusList/_ForeignStockList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FocusList/_ForeignStockList.cshtml
@@ -115,7 +115,7 @@
                             <div class="c-cardTable__content">
                                 <div class="l-target">
                                     <div class="l-target__name">
-                                        <a href="@(detailUrl)?id=<%= ProductCode %>" data-id="<%= ProductCode %>" class="o-contentLink t-bold u-ellipsis-2"><%= ProductName %></a>
+                                        <a href="@(detailUrl)?id=<%= ProductCode %>" target="_blank" data-id="<%= ProductCode %>" class="o-contentLink t-bold u-ellipsis-2"><%= ProductName %></a>
                                     </div>
                                     <% if (Tags!=null) { %>
                                     <div class="l-target__additional">
