--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_HistoricalPrices.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_HistoricalPrices.cshtml
@@ -339,6 +339,30 @@
             }
         }
 
+        function dateFormat(time) {
+            let date = new Date(time);
+            let formattedDate = date.getFullYear() + '/' + ('0' + (date.getMonth() + 1)).slice(-2) + '/' + ('0' + date.getDate()).slice(-2);
+            return formattedDate;
+        }
+
+        function roundToTwo(num) {
+            let scale = 2;
+            return +(Math.round(num + 'e+' + scale) + 'e-' + scale);
+        }
+
+        function checkSameYear(time1, time2) {
+            let year1 = new Date(time1).getFullYear();
+            let year2 = new Date(time2).getFullYear();
+            return year1 === year2;
+        }
+
+        function checkSameYearAndMonth(time1, time2) {
+            let prevDate = new Date(time1);
+            let currentDate = new Date(time2);
+            return prevDate.getMonth() + 1 === currentDate.getMonth() + 1
+                && prevDate.getFullYear() === currentDate.getFullYear();
+        }
+
         //#region 歷史買賣價 – 買賣價走勢
         document.addEventListener('DOMContentLoaded', function () {
             if (!jQuery) {
@@ -479,10 +503,12 @@
                                 name: '買價',
                                 data: bankBuyPrice_array,
                                 legendSymbol: 'rectangle',
+                                turboThreshold: 0
                             }, {
                                 name: '賣價',
                                 data: bankSellPrice_array,
                                 legendSymbol: 'rectangle',
+                                turboThreshold: 0
                             }];
 
                             if (bankBuyPrice_array) {
@@ -626,8 +652,7 @@
                                     outside: true,
                                     useHTML: true,
                                     formatter: function () {
-                                        let date = new Date(this.x);
-                                        let formattedDate = date.getFullYear() + '/' + ('0' + (date.getMonth() + 1)).slice(-2) + '/' + ('0' + date.getDate()).slice(-2);
+                                        let formattedDate = dateFormat(this.x);
                                         let tooltipText = '';
                                         this.points.forEach(point => {
                                             tooltipText += '<div style="display: flex;">' + '<div style="margin-right: 4px">'
@@ -646,16 +671,35 @@
                                     tickPosition: 'inside',
                                     tickWidth: 0.5,
                                     tickLength: 7,
-                                    tickInterval: 24 * 3600 * 1000 * 7,
                                     labels: {
                                         formatter: function () {
+                                            let unitName = '';
+                                            let output = null;
+
+                                            if (checkSameYear(obj.startDate, obj.endDate)) {
+                                                unitName = 'day';
+                                            } else {
+                                                unitName = 'year';
+                                            }
+
                                             const format = {
-                                                day: '%Y/%m',
-                                                week: '%Y/%m',
-                                                month: '%Y/%m',
+                                                day: '%m/%d',
                                                 year: '%Y/%m'
-                                            }[this.tickPositionInfo.unitName];
-                                            return Highcharts.dateFormat(format, this.value);
+                                            }[unitName];
+
+                                            if (this.isFirst) {
+                                                previousVal = this.value;
+                                                return Highcharts.dateFormat(format, this.value);
+                                            }
+
+                                            let currentVal = this.value;
+
+                                            if (!checkSameYearAndMonth(previousVal, currentVal)) {  // 比較前一個點和當前點的日期
+                                                output = Highcharts.dateFormat(format, currentVal);
+                                            }
+
+                                            previousVal = this.value;
+                                            return output;
                                         },
                                         style: {
                                             color: '#6e6e6e'
