Fix: 基金規模上限須加大

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundSearch/FundSearch.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundSearch/FundSearch.cshtml
@@ -2007,10 +2007,10 @@
 						onFilterSelect: function (obj) {
 							if (obj.criteria.type === 'range') {
 								if (obj.values[0] !== obj.values[0]) {
-									obj.values[0] = -99999;
+									obj.values[0] = -99999999999;
 								}
 								if (obj.values[1] !== obj.values[1]) {
-									obj.values[1] = 99999;
+									obj.values[1] = 9999999999;
 								}
 							}
 						},
