Update : 調整風險屬性相關判斷、修正客戶做完風險屬性後API取得相對應風險屬性卻沒有更新相對應的推薦產品問題

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/EducationFund.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/EducationFund.cshtml
@@ -1534,6 +1534,7 @@
     (function ($, window, document, undefined) {
         document.addEventListener("DOMContentLoaded", function () {
             var resultHasGap;
+            var Risk = SC_DATA.Risk !== undefined ? SC_DATA.Risk.toString() : undefined;
             var description, readingbar = [], earningsChart = [], chartsRevenues = [], chartsRewards = [], chartsRewardsCategories = [], chartsAssets = [];
             var hasRenderedRecommendations = false;
             var lockImg = "/themes/images/icons/others/lock.svg"
@@ -1836,11 +1837,11 @@
                         $(".tab4Btn").addClass("u-hidden");
                         $(".tab5Btn").removeClass("u-hidden");
 
-                        if (SC_DATA.Risk == '1') {
+                        if (Risk == '1') {
                             defaultRiskAttributes = 2;
-                        } else if (SC_DATA.Risk == '2') {
+                        } else if (Risk == '2') {
                             defaultRiskAttributes = 5;
-                        } else if (SC_DATA.Risk == '3') {
+                        } else if (Risk == '3') {
                             defaultRiskAttributes = 7;
                         }
 
@@ -2140,7 +2141,7 @@
                             }, 100);
 
                             UpdateRiskAttributesContent(data.risk);
-
+                            Risk = data.risk;
                             $("#Recalculate").trigger('click');
                         } else {
                             setTimeout(function (e) {
@@ -2181,9 +2182,9 @@
             //#region 登入遮罩判斷&依照客戶風險屬性給值
             if (SC_DATA.IsLoggedIn) {
                 if (SC_DATA.WebBankId !== "") {
-                    if (SC_DATA.Risk !== undefined) {
+                    if (Risk !== undefined) {
 
-                        UpdateRiskAttributesContent(SC_DATA.Risk);
+                        UpdateRiskAttributesContent(Risk);
 
                     } else {
                         renderNotRisk();
@@ -2545,7 +2546,7 @@
                     stock: assetsData.stock.number
                 });
 
-                if (SC_DATA.Risk !== undefined) {
+                if (Risk !== undefined) {
                     let tab = "tab1";
                     let event = $('[data-tab-panel-id="tab-1"] .recommendedFunds .swiper-wrapper');
                     let eventString = '[data-tab-panel-id="tab-1"] .recommendedFunds';
@@ -2625,7 +2626,7 @@
                     stock: assetsData.stock.number
                 });
 
-                if (SC_DATA.Risk !== undefined) {
+                if (Risk !== undefined) {
                     let tab = "tab2";
 
                     let event = $('[data-tab-panel-id="tab-2"] .recommendedFunds .swiper-wrapper');
@@ -2699,7 +2700,7 @@
                     stock: assetsData.stock.number
                 });
 
-                if (SC_DATA.Risk !== undefined) {
+                if (Risk !== undefined) {
                     let tab = "tab3";
 
                     let event = $('[data-tab-panel-id="tab-3"] .recommendedFunds .swiper-wrapper');
@@ -2772,7 +2773,7 @@
                     stock: assetsData.stock.number
                 });
 
-                if (SC_DATA.Risk !== undefined) {
+                if (Risk !== undefined) {
                     let tab = "tab4";
 
                     let event = $('[data-tab-panel-id="tab-4"] .recommendedFunds .swiper-wrapper');
@@ -2845,7 +2846,7 @@
                     stock: assetsData.stock.number
                 });
 
-                if (SC_DATA.Risk !== undefined) {
+                if (Risk !== undefined) {
                     let tab = "tab5";
 
                     let event = $('[data-tab-panel-id="tab-5"] .recommendedFunds .swiper-wrapper');
@@ -3413,7 +3414,6 @@
 
             //#region 更新風險屬性相關內容
             function UpdateRiskAttributesContent(risk) {
-                risk = String(risk);
                 let imgSrc, warningText;
 
                 switch (risk) {
@@ -3497,11 +3497,11 @@
                     expectedRoi = ExpectedRoi;
                 }
 
-                if (SC_DATA.Risk == '1') {
+                if (Risk == '1') {
                     riskLevel = "'RR1','RR2'";
-                } else if (SC_DATA.Risk == '2') {
+                } else if (Risk == '2') {
                     riskLevel = "'RR1','RR2','RR3','RR4'";
-                } else if (SC_DATA.Risk == '3') {
+                } else if (Risk == '3') {
                     riskLevel = "'RR1','RR2','RR3','RR4','RR5'";
                 }
 
