--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/RetirementPreparation.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/RetirementPreparation.cshtml
@@ -1587,6 +1587,7 @@
     (function ($, window, document, undefined) {
         document.addEventListener("DOMContentLoaded", function () {
             var resultHasGap;
+            var Risk = SC_DATA.Risk !== undefined ? SC_DATA.Risk.toString() : undefined;
             var description, readingbar = [], earningsChart = [], chartsRevenues = [], chartsRewards = [], chartsRewardsCategories = [], chartsAssets = [];
             var hasRenderedRecommendations = false;
             var lockImg = "/themes/images/icons/others/lock.svg"
@@ -1956,11 +1957,11 @@
                         $(".tab3Btn").addClass("u-hidden");
                         $(".tab4Btn").removeClass("u-hidden");
 
-                        if (SC_DATA.Risk == '1') {
+                        if (Risk == '1') {
                             defaultRiskAttributes = 2;
-                        } else if (SC_DATA.Risk == '2') {
+                        } else if (Risk == '2') {
                             defaultRiskAttributes = 5;
-                        } else if (SC_DATA.Risk == '3') {
+                        } else if (Risk == '3') {
                             defaultRiskAttributes = 7;
                         }
 
@@ -2280,7 +2281,7 @@
                             }, 100);
 
                             UpdateRiskAttributesContent(data.risk);
-
+                            Risk = data.risk;
                             $("#Recalculate").trigger('click');
                         } else {
                             setTimeout(function (e) {
@@ -2326,9 +2327,9 @@
                 }
 
                 if (SC_DATA.WebBankId !== "") {
-                    if (SC_DATA.Risk !== undefined) {
+                    if (Risk !== undefined) {
 
-                        UpdateRiskAttributesContent(SC_DATA.Risk);
+                        UpdateRiskAttributesContent(Risk);
 
                     } else {
                         renderNotRisk();
@@ -2844,7 +2845,7 @@
                     stock: assetsData.stock.number
                 });
 
-                if (SC_DATA.Risk !== undefined) {
+                if (Risk !== undefined) {
                     let tab = "tab1";
                     let event = $('[data-tab-panel-id="tab-1"] .recommendedFunds .swiper-wrapper');
                     let eventString = '[data-tab-panel-id="tab-1"] .recommendedFunds';
@@ -2927,7 +2928,7 @@
                     stock: assetsData.stock.number
                 });
 
-                if (SC_DATA.Risk !== undefined) {
+                if (Risk !== undefined) {
                     let tab = "tab2";
 
                     let event = $('[data-tab-panel-id="tab-2"] .recommendedFunds .swiper-wrapper');
@@ -3004,7 +3005,7 @@
                     stock: assetsData.stock.number
                 });
 
-                if (SC_DATA.Risk !== undefined) {
+                if (Risk !== undefined) {
                     let tab = "tab3";
 
                     let event = $('[data-tab-panel-id="tab-3"] .recommendedFunds .swiper-wrapper');
@@ -3080,7 +3081,7 @@
                     stock: assetsData.stock.number
                 });
 
-                if (SC_DATA.Risk !== undefined) {
+                if (Risk !== undefined) {
                     let tab = "tab4";
 
                     let event = $('[data-tab-panel-id="tab-4"] .recommendedFunds .swiper-wrapper');
@@ -3659,7 +3660,6 @@
 
             //#region 更新風險屬性相關內容
             function UpdateRiskAttributesContent(risk) {
-                risk = String(risk);
                 let imgSrc, warningText;
 
                 switch (risk) {
@@ -3743,11 +3743,11 @@
                     expectedRoi = ExpectedRoi;
                 }
 
-                if (SC_DATA.Risk == '1') {
+                if (Risk == '1') {
                     riskLevel = "'RR1','RR2'";
-                } else if (SC_DATA.Risk == '2') {
+                } else if (Risk == '2') {
                     riskLevel = "'RR1','RR2','RR3','RR4'";
-                } else if (SC_DATA.Risk == '3') {
+                } else if (Risk == '3') {
                     riskLevel = "'RR1','RR2','RR3','RR4','RR5'";
                 }
 
