fix : 到價通知ICON顯示邏輯調整

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FocusList/_EtfList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FocusList/_EtfList.cshtml
@@ -187,7 +187,7 @@
                     </td>
                     <td class="c-cardTable__body c-cardTable__body--line" data-card-table-width="1/1" >
                         <div class="c-cardTable__title" data-length="5">淨值/<br>漲跌幅通知</div>
-                        <div class="c-cardTable__content" data-infostatus="<% if (Info != null){%><%= 'true' %><% } else {%><%= 'false' %> <%}%>">
+                            <div class="c-cardTable__content" data-infostatus="<% if  (Info != null && Info.ReachValueOpen || Info != null && Info.QuoteChangeOpen){%><%= 'true' %><% } else {%><%= 'false' %> <%}%>">
                             <% if (Info  == null ) { %>
                             <div class="t-tip--lt">點鈴鐺設定到價通知</div>
                             <% } else {%>
