--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FocusList/_ShareScript.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FocusList/_ShareScript.cshtml
@@ -823,7 +823,7 @@
                         InfoType: "2",
                         InfoStartDate: $('[data-quotestart]', '[data-quoteChange-calendar]').val(),
                         InfoEndDate: $('[data-quoteend]', '[data-quoteChange-calendar]').val(),
-                        OpenInfo: $('input[name="price"]').prop("checked")
+                        OpenInfo: $('input[name="quoteChange"]').prop("checked")
                     }
 
                     if (Number(rise.val()) > 0 && !Number(fall.val())) {
